name:                hoverpass
version:             0.0.0.1
-- synopsis:
description:         Overpass-API Wrapper on Haskell
homepage:            https://github.com/wisn/hoverpass#readme
license:             MIT
license-file:        LICENSE
author:              Wisnu Adi Nurcahyo
maintainer:          wisnu@nurcahyo.me
copyright:           'Copyright: 2017 Wisnu Adi Nurcahyo'
category:            API
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite hoverpass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hoverpass
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wisn/hoverpass
